--- a/models/lib/LL_tier2_windows_server.yaml
+++ b/models/lib/LL_tier2_windows_server.yaml
@@ -1,18 +1,18 @@
 heat_template_version: 2015-10-15
 
 description: >
-  Generic Linux server HOT template 
+  Generic Windows server HOT template
 
 parameters:
   key_name:
     type: string
-  image_linux:
+  image_windows:
     type: string
-    default: Ubuntu Server 18.04 LTS (Bionic Beaver) amd64
-  flavor_linux_server:
+    default: Windows Server 2019 Standard Evaluation
+  flavor_windows_server:
     type: string
     default: m1.small
-  sec_group_linux:
+  sec_group_windows:
     type: comma_delimited_list
     default: FooRules,default
   group_net_name:
@@ -27,26 +27,26 @@ parameters:
 
 resources:
  
-  linux_server:
+  windows_server:
     type: OS::Nova::Server
     properties:
       name:             { get_param: server_name }
-      image:            { get_param: image_linux }
-      flavor:           { get_param: flavor_linux_server }
+      image:            { get_param: image_windows }
+      flavor:           { get_param: flavor_windows_server }
       key_name:         { get_param: key_name }
       networks:
-        - port:         { get_resource: linux_server_port }
+        - port:         { get_resource: windows_server_port }
 
-  linux_server_port:
+  windows_server_port:
     type: OS::Neutron::Port
     properties:
       network_id:       { get_param: group_net_name }
-      security_groups:  { get_param: sec_group_linux }
+      security_groups:  { get_param: sec_group_windows }
       fixed_ips:
         - subnet_id:    { get_param: lan_subnet }
 
-  linux_server_floating_ip:
+  windows_server_floating_ip:
     type: OS::Neutron::FloatingIP
     properties:
       floating_network: { get_param: public_net }
-      port_id:          { get_resource: linux_server_port }
+      port_id:          { get_resource: windows_server_port }
