--- a/models/LL_tier1.yaml
+++ b/models/LL_tier1.yaml
@@ -27,6 +27,18 @@ parameters:
     description: >
       ID or name of public network for which floating IP addresses will be allocated
     default: ntnu-internal
+  subnetA:
+    type: string
+    default: subnetA
+  subnetB:
+    type: string
+    default: subnetB
+  flavor_linux_server:
+    type: string
+    default: m1.small
+  flavor_windows_server:
+    type: string
+    default: m1.medium
   #group_id:
   #  type: string
   #  description: 2 digit ID assigned to each group.
@@ -41,24 +53,34 @@ resources:
     type: LL_tier2_linux_server.yaml  # Add lib/prefix
     depends_on: networking
     properties:
-      server_name:      "Linux01"
-      key_name:          { get_param: key_name }
-      public_net:        { get_param: public_net }
-      group_net_name:    { get_attr: [networking, group_name] }
-      image_linux:       { get_param: image_linux }    
-      sec_group_linux:   { get_param: sec_group_linux }  
-      lan_subnet:        { get_attr: [networking, lan_subnet] } 
-     # dmz_subnet:        { get_attr: [networking, dmz_subnet, name] }
+      server_name:        "Linux01"
+      key_name:           { get_param: key_name }
+      public_net:         { get_param: public_net }
+      group_net_name:     { get_attr: [networking, group_name] }
+      image_linux:        { get_param: image_linux }    
+      sec_group_linux:    { get_param: sec_group_linux }  
+      subnetA:            { get_attr: [networking, subnetA] } 
+      subnetB:            { get_attr: [networking, subnetB] }
+      flavor_windows_server:  { get_param: flavor_windows_server }
+      flavor_linux_server:    { get_param: flavor_linux_server }
 
   windows_01:
     type: LL_tier2_windows_server.yaml  # Add lib/prefix
     depends_on: networking
     properties:
-      server_name:       "Windows01"
-      key_name:          { get_param: key_name }
-      public_net:        { get_param: public_net }
-      group_net_name:    { get_attr: [networking, group_name] }
-      image_windows:       { get_param: image_windows }    
-      sec_group_windows:   { get_param: sec_group_windows }  
-      lan_subnet:        { get_attr: [networking, lan_subnet] } 
-    # dmz_subnet:        { get_attr: [networking, dmz_subnet, name] }
+      server_name:        "Windows01"
+      key_name:           { get_param: key_name }
+      public_net:         { get_param: public_net }
+      group_net_name:     { get_attr: [networking, group_name] }
+      image_windows:      { get_param: image_windows }    
+      sec_group_windows:  { get_param: sec_group_windows }  
+      subnetA:            { get_attr: [networking, subnetA] } 
+    # subnetB:        { get_attr: [networking, subnetB, name] }
+
+  floating_ip:
+    type: LL_tier2_floatingIP.yaml
+    properties:
+      public_network:     { get_param: public_network }
+      port1:              { get_attr: [linux_01, port1] }
+      port2:              { get_attr: [windows_01, port1] }
+      
