--- a/examples/example-attack-defense-minimal.yaml
+++ b/examples/example-attack-defense-minimal.yaml
@@ -19,8 +19,8 @@ resources:
     type: node                              
     properties:
       networks:                               
-        router01:                              
-          subnet: ctf-lan                                    
+      - router01:                              
+        subnet: ctf-lan                                    
 
   router01:
     type: router                    
