--- a/lib/scenario-templates/management-attack-defense-template.yaml
+++ b/lib/scenario-templates/management-attack-defense-template.yaml
@@ -3,9 +3,9 @@ description: management template for attack-defense scenarios
 
 parameters:
   public_net: {type: string, default: ntnu-internal}
-  puppet-master_server_name: {type: string, default: puppet-master}
-  puppet-master_image: {type: string, default: CentOS 7.5 x86_64 } #Ubuntu Server 18.04 LTS (Bionic Beaver) amd64 } #CentOS 7.5 x86_64 }
-  puppet-master_flavor: {type: string, default: m1.medium}
+  manager_server_name: {type: string, default: manager}
+  manager_image: {type: string, default: Ubuntu Server 18.04 LTS (Bionic Beaver) amd64 } #CentOS 7.5 x86_64 }
+  manager_flavor: {type: string, default: m1.medium}
   key_name: {type: string, default: testkey }
 
   management-lan_net_cidr: {type: string, default: 192.168.200.0/24}
@@ -23,38 +23,42 @@ resources:
     type: OS::Neutron::Net
     properties: {name: Attack & Defense Net }
 
-  puppet-master:
+  manager:
     type: OS::Nova::Server
     properties:
-      name: {get_param: puppet-master_server_name}
-      image: {get_param: puppet-master_image}
-      flavor: {get_param: puppet-master_flavor}
+      name: {get_param: manager_server_name}
+      image: {get_param: manager_image}
+      personality:
+        privkey: { get_file: ../../ansible_deploy_key }
+      metadata: { 'group': 'manager' }
+      flavor: {get_param: manager_flavor}
       key_name: {get_param: key_name}
       networks:
-      - port: {get_resource: puppet-master_port0}
+      - port: {get_resource: manager_port0}
       user_data_format: RAW
       user_data:
         str_replace:
-          template: { get_file: ../scripts/puppet-master.sh }
+          template: { get_file: ../scripts/manager.sh }
           params:
             __teststring__: "This script should eventually do something useful..."
 
-  puppet-master_port0:
+  manager_port0:
     type: OS::Neutron::Port
     properties:
       network: {get_resource: management-net}
       security_groups:
-      - {get_resource: puppet-master_security_group_management-lan}
+      - {get_resource: manager_security_group_management-lan}
       fixed_ips:
       - subnet_id: {get_resource: management-lan}
       
-  puppet-master_security_group_management-lan:
+  manager_security_group_management-lan:
     type: OS::Neutron::SecurityGroup
     properties:
       rules:
       - {remote_ip_prefix: 0.0.0.0/0, protocol: icmp}
       - {remote_ip_prefix: 0.0.0.0/0, protocol: tcp, port_range_min: 22, port_range_max: 22}
       - {remote_ip_prefix: 0.0.0.0/0, protocol: tcp, port_range_min: 8140, port_range_max: 8140}
+      - {remote_ip_prefix: 0.0.0.0/0, protocol: tcp, port_range_min: 8000, port_range_max: 8010}
 
   management:
     type: OS::Neutron::Router
@@ -97,16 +101,16 @@ resources:
       router_id: {get_resource: management}
       subnet_id: {get_resource: ctf-lan}
 
-  puppet-master_floating_ip:
+  manager_floating_ip:
     type: OS::Neutron::FloatingIP
     properties:
       floating_network: { get_param: public_net }
-      port_id: { get_resource: puppet-master_port0 }
+      port_id: { get_resource: manager_port0 }
 
 outputs:
-  puppet_master_ip:
-    description: IP address of puppet master 
-    value: { get_attr: [ puppet-master, first_address ]}
+  manager_ip:
+    description: IP address of manager
+    value: { get_attr: [ manager, first_address ]}
   attack_defense_subnet:
     description: ID of management subnet_id
     value: { get_resource: ctf-lan }
